GNOME Bugzilla – Bug 682710
shell-app: Fix a memory leak in the running state
Last modified: 2012-08-26 14:56:25 UTC
See patch. Spotted by darkxzt on IRC.
Created attachment 222445 [details] [review] shell-app: Fix a memory leak in the running state We need to two strings that we allocated here.
Review of attachment 222445 [details] [review]: "We need to two strings that we allocated here." "need to free" otherwise looks good.
Attachment 222445 [details] pushed as 785ab81 - shell-app: Fix a memory leak in the running state