shell-app: Fix a memory leak in the running state

We need to free two strings that we allocated here.

https://bugzilla.gnome.org/show_bug.cgi?id=682710
https://github.com/GNOME/gnome-shell/commit/785ab8192b93c4873d694d866bbe7655067cb492